--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:padding="10dp"
-            android:background="@drawable/imageview" />
+            android:background="@drawable/imageview"
+            android:onClick="onClick" />
 
 
         <!--<TextView-->
@@ -65,29 +66,9 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="75dp"
             android:layout_marginTop="6dp"
-            android:src="@drawable/icon_marker" />
+            android:src="@drawable/icon_marker"
+            android:onClick="onClick" />
 
-        <ImageButton
-            android:id="@+id/addPhoto"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="132dp"
-            android:src="@drawable/icon_camera"
-            />
-
-        <ImageButton
-            android:id="@+id/photoLib"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="70dp"
-            android:layout_marginTop="4dp"
-            android:src="@drawable/icon_photolibrary"
-            />
 
     </RelativeLayout>
 
